# Lightcore

./: .gitignore  Cargo.toml  DESIGN.md  README.md  config.toml
examples/: bootstrap.rs  client.rs  hbbft.rs  pinnode.rs  rpc.rs  server.rs
examples/lc/: main.rs
examples/p2p/: main.rs
examples/ping/: handler.rs  main.rs  ping.rs  protocol.rs
examples/storage/: #main.rs#  .#main.rs  main.rs
proto/: block.proto  doc.proto  document.proto  transaction.proto  transcation.proto  tx.proto
rfcs/: README.md
rfcs/text-zh/: 0002-state-and-transaction.md  README.md
sdk/: config.js  index.js  package.json  req.js  test.js
sdk/src/: index.js
sdk/src/proto/: tx.proto
src/: block.rs  document.rs  error.rs  lib.rs  p2p.rs
src/chain/: block.rs  config.rs  mod.rs
src/config/: mod.rs
src/executor/: config.rs  executor.rs  mod.rs  state.rs
src/executor/protobuf/: mod.rs  state.proto  state.rs
src/jsonrpc/: config.rs  mod.rs  server.rs
src/lightcore/: mod.rs
src/macros/: mod.rs
src/p2p/: README.md  behaviour.rs  config.rs  discovery.rs  error.rs  futures.rs  handler.rs  mod.rs  protocol.rs  service.rs  transport.rs
src/protobuf/: block.rs  doc.rs  mod.rs  tx.rs
src/storage/: config.rs  error.rs  mod.rs
src/struction/: block.rs  document.rs  mod.rs  transcation.rs
src/txpool/: config.rs  crypto.rs  mod.rs
