[package]
name = "lightcore"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.1"
tokio = "0.1.22"
jsonrpc-core = "13.0.0"
jsonrpc-http-server = "13.0.0"
base64 = "0.10.1"
quick-protobuf = "0.6.3"
crust = "0.32.1"

