[package]
name = "lightcore"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.1"
tokio = "0.1.22"
jsonrpc-core = "13.0.0"
jsonrpc-http-server = "13.0.0"
base64 = "0.10.1"
quick-protobuf = "0.6.3"

# bloom
dirs = "2.0.2"
sha3 = "0.8.2"
sled = "0.24.1"
ed25519-dalek = "1.0.0-pre.1"

# p2p

quic-p2p = "0.2.0"
crossbeam-channel = "0.3.8"
bytes = "0.4.12"
